# agente-financeiro

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  start.py
.claude/: launch.json  rules.py
_research/: capture.js
agent/: agents_llm.py  config.py  db.py
app/: config.py
backend/: config.py  db.py  dependencies.py  main.py
dashboard/: app.py  db.py  periodo.py
frontend/: app.py  config.py
migrations/: env.py
prompts/: cadastro-confirmado.md  categorizacao.md  confirmacao.md  fora-de-escopo.md  intencao.md  resumo.md  sistema.md
react-dashboard/: .env.example  Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.js
scripts/: backfill_parcelas.py  cenarios_teste.jsonl  chat_terminal.py  criar_usuario.py  sanitizacao.py  seed_recorrencias.py  seed_recuperacao.py  teste_rapido.jsonl
specs/: negocio.md
tests/: conftest.py  test_agente_isolamento.py  test_agente_usuario_id.py  test_agents.py  test_auth_identidade.py  test_backfill.py  test_classificador.py  test_criar_usuario.py  test_dashboard_graficos.py  test_dashboard_infra.py  test_dashboard_parcelas.py  test_dashboard_projecao.py  test_dashboard_resumo.py  test_dashboard_templates.py  test_dashboard_transacoes.py  test_domain_intencao.py  test_estado_store.py  test_evolution_client.py  test_extrator.py  test_formatador.py  test_frontend_cadastro.py  test_main_wiring.py  test_marcar_pago.py  test_parcelas_helper.py  test_parser_periodo.py  test_pipeline.py  test_prompts.py  test_rag.py  test_repository.py  (+20 more)
(+535 files in other folders)
